--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -15,4 +15,6 @@ jobs:
       - name: Push to HF Space
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://garygoh:${{ env.HF_TOKEN }}@huggingface.co/spaces/garygoh/ai-triage-demo main
+        run: |
+        git fetch origin
+        git push https://garygoh:${{ env.HF_TOKEN }}@huggingface.co/spaces/garygoh/ai-triage-demo main -- force
