--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -8,13 +8,19 @@ jobs:
   sync-to-hub:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          lfs: true
-      - name: Push to HF Space
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Git
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "github-actions"
+
+      - name: Push to Hugging Face Space
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          git fetch origin
-          git push https://garygoh:${{ env.HF_TOKEN }}@huggingface.co/spaces/garygoh/ai-triage-demo main -- force
+          git remote add space https://garygoh:${HF_TOKEN}@huggingface.co/spaces/garygoh/ai-triage-demo
+          git fetch space
+          git push --force space main
+
