--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.28.1
-streamlit-authenticator==0.2.3
-requests==2.31.0
-uuid==1.30
+streamlit
+streamlit-authenticator
+requests
+uuid
 datetime
+streamlit-oauth
